Fix visual bug with extra padding

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -10,15 +10,13 @@ html {
 
 body {
   background: #eee;
-  padding: 0 16px;
 }
 
 .c-header {
   background-color: #f5ba13;
-  margin: auto -16px;
   padding: 16px 32px;
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.3);
-  h1 {
+  .c-header__text {
     color: #fff;
     font-family: "McLaren", cursive;
     font-weight: 200;
